7 create project with Vue.js and Aiogram

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,4 +5,4 @@ RUN npm install
 COPY . .
 RUN npm run build
 EXPOSE 80
-CMD ["npx", "serve", "-s", "dist"]
+CMD ["npx", "serve", "-s", "dist", "-l", "80"]
