--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "vue": "^3.3.0",
-    "vue-router": "^4.2.0",
-    "axios": "^1.5.0"
+    "vue-router": "^4.4.0",
+    "serve": "^14.2.0",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.0",
-    "vite": "^4.4.9"
+    "@vitejs/plugin-vue": "^4.4.0",
+    "vite": "^4.4.11"
   }
 }
