--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,4 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 EXPOSE 3478
-CMD ["gunicorn", "--bind", "0.0.0.0:3478", "app:app"]
+CMD ["gunicorn", "--bind", "0.0.0.0:3478", "run:app"]
