--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "9000:80"
+      - "9000:5173"
     depends_on:
       - backend
 
@@ -16,5 +16,5 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - BOT_TOKEN="123"
-      - ADMIN_ID="123"
+      - BOT_TOKEN=${BOT_TOKEN}
+      - ADMIN_ID=${ADMIN_ID}
