--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,6 @@ services:
       dockerfile: Dockerfile
     ports:
       - "5001:5000"
+    environment:
+      - BOT_TOKEN=${BOT_TOKEN}
+      - ADMIN_ID=${ADMIN_ID}
