--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,12 @@ services:
       dockerfile: Dockerfile
     ports:
       - "9000:80"
-    environment:
-      - BOT_TOKEN=${BOT_TOKEN}
-      - ADMIN_ID=${ADMIN_ID}
-
+#    environment:
+#      - BOT_TOKEN=${BOT_TOKEN}
+#      - ADMIN_ID=${ADMIN_ID}
+#
+#59404714
+#7925998018:AAF3IonF_5oB6FZUQhzBkblQ8DT1paeUBjA
   frontend:
     build:
       context: ./frontend
