--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,6 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 EXPOSE 9000
+ENV ADMIN_ID=${ADMIN_ID}
+ENV BOT_TOKEN=${BOT_TOKEN}
 CMD ["gunicorn", "--bind", "0.0.0.0:9000", "run:app"]
