--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ version: "3.8"
 services:
   backend:
     build:
-      context: ./backend
+      context: .
       dockerfile: ./backend/Dockerfile
     ports:
       - "9000:80"
 
   frontend:
     build:
-      context: ./frontend
+      context: .
       dockerfile: ./frontend/Dockerfile
     ports:
       - "8080:8080"
