--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,5 +3,5 @@ WORKDIR /backend
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
-EXPOSE 8000
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "app:app"]
+EXPOSE 80
+CMD ["gunicorn", "-w", "4", "--preload", "-b", "0.0.0.0:80", "app:app"]
