28 create project with Vue.js and Aiogram

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,15 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     ports:
-      - "8000:80"
+      - "9000:8000"
 
   bot:
     build:
       context: ./backend
     command: ["python", "bot.py"]
-    env_file:
-      - .env
+    environment:
+      BOT_TOKEN: "7925998018:AAF3IonF_5oB6FZUQhzBkblQ8DT1paeUBjA"
+      ADMIN_ID: "123"
     depends_on:
       - backend
 
