31 create project with Vue.js and Aiogram

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,4 +5,4 @@ RUN npm install
 COPY . .
 RUN npm run build
 EXPOSE 8080
-CMD ["sh", "-c", "npm run build && npx serve -s dist -l 8080"]
+CMD ["npx", "serve", "-s", "dist", "-l", "8080"]
