--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,22 @@
 version: "3.8"
 services:
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    image: python:3.11
     ports:
       - "9000:8000"
-
+    working_dir: /app
+    volumes:
+      - ./backend:/app
+    command: python -m http.server 8000
+#version: "3.8"
+#services:
+#  backend:
+#    build:
+#      context: ./backend
+#      dockerfile: Dockerfile
+#    ports:
+#      - "9000:8000"
+#
 #  bot:
 #    build:
 #      context: ./backend
