33 create project with Vue.js and Aiogram

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,37 @@
-#version: "3.8"
-#services:
-#  backend:
-#    image: python:3.11
-#    ports:
-#      - "9000:8000"
-#    working_dir: /app
-#    volumes:
-#      - ./backend:/app
-#    command: python -m http.server 8000
 version: "3.8"
 services:
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    image: python:3.11
     ports:
       - "9000:8000"
-
-  bot:
-    build:
-      context: ./backend
-    command: ["python", "bot.py"]
-    environment:
-      BOT_TOKEN: "7925998018:AAF3IonF_5oB6FZUQhzBkblQ8DT1paeUBjA"
-      ADMIN_ID: "123"
-    depends_on:
-      - backend
-
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    ports:
-      - "8080:8080"
-    depends_on:
-      - backend
+    working_dir: /app
+    volumes:
+      - ./backend:/app
+    command: python -m http.server 8000
+#version: "3.8"
+#services:
+#  backend:
+#    build:
+#      context: ./backend
+#      dockerfile: Dockerfile
+#    ports:
+#      - "9000:8000"
+#
+#  bot:
+#    build:
+#      context: ./backend
+#    command: ["python", "bot.py"]
+#    environment:
+#      BOT_TOKEN: "7925998018:AAF3IonF_5oB6FZUQhzBkblQ8DT1paeUBjA"
+#      ADMIN_ID: "123"
+#    depends_on:
+#      - backend
+#
+#  frontend:
+#    build:
+#      context: ./frontend
+#      dockerfile: Dockerfile
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - backend
