--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,5 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 EXPOSE 8000
-CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:8000", "app:app"]
+CMD ["python", "app.py"]
+#CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:8000", "app:app"]
