35 create project with Vue.js and Aiogram

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,16 @@
-FROM python:3.11
-WORKDIR /backend
+FROM python:3.11-slim
+WORKDIR /app
+
+# Установите зависимости
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN apt-get update && apt-get install -y --no-install-recommends build-essential \
+    && pip install --no-cache-dir -r requirements.txt \
+    && apt-get purge -y --auto-remove build-essential \
+    && rm -rf /var/lib/apt/lists/*
+
+# Копируйте код
 COPY . .
+
+# Запуск приложения
 EXPOSE 8000
 CMD ["gunicorn", "-b", "0.0.0.0:8000", "app:app"]
