--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,16 +1,7 @@
-FROM python:3.11-slim
-WORKDIR /app
-
-# Установите зависимости
+FROM python:3.11
+WORKDIR /backend
 COPY requirements.txt .
-RUN apt-get update && apt-get install -y --no-install-recommends build-essential \
-    && pip install --no-cache-dir -r requirements.txt \
-    && apt-get purge -y --auto-remove build-essential \
-    && rm -rf /var/lib/apt/lists/*
-
-# Копируйте код
+RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
-
-# Запуск приложения
 EXPOSE 8000
 CMD ["gunicorn", "-b", "0.0.0.0:8000", "app:app"]
