37 create project with Vue.js and Aiogram

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
     build:
       context: ./backend
     command: ["python", "bot.py"]
-    environment:
-      BOT_TOKEN: "7925998018:AAF3IonF_5oB6FZUQhzBkblQ8DT1paeUBjA"
-      ADMIN_ID: "123"
+#    environment:
+#      BOT_TOKEN: "7925998018:AAF3IonF_5oB6FZUQhzBkblQ8DT1paeUBjA"
+#      ADMIN_ID: "123"
     depends_on:
       - backend
