--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    environment:
+      BOT_TOKEN: "7925998018:AAF3IonF_5oB6FZUQhzBkblQ8DT1paeUBjA"
+      ADMIN_ID: "123"
     ports:
       - "9000:8000"
 
@@ -20,8 +23,8 @@ services:
     build:
       context: ./backend
     command: ["python", "bot.py"]
-#    environment:
-#      BOT_TOKEN: "7925998018:AAF3IonF_5oB6FZUQhzBkblQ8DT1paeUBjA"
-#      ADMIN_ID: "123"
+    environment:
+      BOT_TOKEN: "7925998018:AAF3IonF_5oB6FZUQhzBkblQ8DT1paeUBjA"
+      ADMIN_ID: "123"
     depends_on:
       - backend
