39 create project with Vue.js and Aiogram

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,10 @@ services:
   bot:
     build: ./bot
     environment:
-      BOT_TOKEN: "7925998018:AAF3IonF_5oB6FZUQhzBkblQ8DT1paeUBjA"
-      ADMIN_ID: "123"
+      BOT_TOKEN: ${BOT_TOKEN}
+      ADMIN_ID: ${ADMIN_ID}
     depends_on:
       - backend
+    x-tw-secrets:
+      - BOT_TOKEN
+      - ADMIN_ID
