41 create project with Vue.js and Aiogram

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,5 +3,4 @@ WORKDIR /backend
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
-EXPOSE 80
-CMD ["gunicorn", "-b", "0.0.0.0:80", "--workers", "2", "--timeout", "60", "app:app"]
+CMD ["gunicorn", "-b", "0.0.0.0:8000", "app:app"]
