--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,12 @@
 version: "3.8"
+
 services:
   backend:
     build: ./backend
     ports:
-      - "9000:80"
+      - "9000:8000"
+    networks:
+      - app-network
 
   frontend:
     build: ./frontend
@@ -11,6 +14,8 @@ services:
       - "8080:8080"
     depends_on:
       - backend
+    networks:
+      - app-network
 
   bot:
     build: ./bot
@@ -19,6 +24,9 @@ services:
       ADMIN_ID: ${ADMIN_ID}
     depends_on:
       - backend
-    x-tw-secrets:
-      - BOT_TOKEN
-      - ADMIN_ID
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
