42 create project with Vue.js and Aiogram

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,26 +5,43 @@ services:
     build: ./backend
     networks:
       - app-network
+    # # Порт нужен только для отладки:
+    # ports:
+    #   - "8000:8000"
 
   frontend:
     build: ./frontend
-    ports:
-      - "8080:8080"
-    depends_on:
-      - backend
     networks:
       - app-network
+    # # Порт нужен только для отладки:
+    # ports:
+    #   - "8080:8080"
 
   bot:
     build: ./bot
     environment:
       BOT_TOKEN: ${BOT_TOKEN}
       ADMIN_ID: ${ADMIN_ID}
-    depends_on:
-      - backend
     networks:
       - app-network
+    depends_on:
+      - backend
+
+  nginx:
+    image: nginx:latest
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - /etc/letsencrypt:/etc/letsencrypt
+    ports:
+      - "80:80"
+      - "443:443"
+    networks:
+      - app-network
+    depends_on:
+      - backend
+      - frontend
 
 networks:
   app-network:
     driver: bridge
+    name: telegram_app_network
