43 create default project

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,12 @@
-FROM node:18
+FROM node:18 AS build
 WORKDIR /frontend
-COPY package.json ./
+COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
-EXPOSE 8080
+
+FROM node:18
+WORKDIR /frontend
+COPY --from=build /frontend/dist ./dist
+RUN npm install -g serve
 CMD ["npx", "serve", "-s", "dist", "-l", "8080"]
