--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,30 +1,27 @@
-events {}
+server {
+    listen 443 ssl;
+    server_name tgtest.twc1.net;
 
-http {
-    server {
-        listen 80;
-        server_name tgtest.twc1.net;
-        return 301 https://$host$request_uri;
+    ssl_certificate /etc/letsencrypt/live/tgtest.twc1.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tgtest.twc1.net/privkey.pem;
+
+    # Статические файлы фронтенда
+    location / {
+        root /frontend/dist;
+        try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-cache";
     }
 
-    server {
-        listen 443 ssl;
-        server_name tgtest.twc1.net;
+    # Правильные MIME-типы
+    types {
+        text/html html;
+        application/javascript js;
+        text/css css;
+    }
 
-        ssl_certificate /etc/letsencrypt/live/tgtest.twc1.net/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/tgtest.twc1.net/privkey.pem;
-
-        # Frontend
-        location / {
-            proxy_pass http://frontend:8080;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
-
-        # Backend API
-        location /api/ {
-            proxy_pass http://backend:8000;
-            proxy_set_header Host $host;
-        }
+    # Бэкенд
+    location /api/ {
+        proxy_pass http://backend:8000;
+        proxy_set_header Host $host;
     }
 }
