44 create default project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     build: ./frontend
     networks:
       - app-network
+    depends_on:
+      - backend
     # # Порт нужен только для отладки:
     # ports:
     #   - "8080:8080"
