--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,8 @@
-FROM node:18 AS build
-WORKDIR /frontend
-COPY package*.json ./
-RUN npm install
-COPY . .
-RUN npm run build
-
 FROM node:18
 WORKDIR /frontend
-COPY --from=build /frontend/dist ./dist
-RUN npm install -g serve
+COPY package.json ./
+RUN npm install
+COPY . .
+RUN npm run build  # Сборка проекта в папку dist
+EXPOSE 8080
 CMD ["npx", "serve", "-s", "dist", "-l", "8080"]
