--- a/setup_info.ini
+++ b/setup_info.ini
@@ -31,3 +31,9 @@ fetch("https://tgtest.twc1.net/api/save_user", ...)
 
 chmod +x deploy.sh
 ./deploy.sh
+
+telegram_test содержит docker-compose.yml, deploy.sh, .env, setup_info.ini, /backend, /bot, /frontend, /nginx
+backend/ содержит app.py, routes.py, Dockerfile и requirements.txt.
+bot/ содержит bot.py, config.py, Dockerfile и requirements.txt.
+frontend/ содержит Dockerfile, package.json, vite.config.js, public/index.html, src/App.vue, src/main.js, прочие компоненты в assets/components и изображения в assets/images/
+nginx/ содержит nginx.conf
