--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,27 +1,29 @@
-server {
-    listen 443 ssl;
-    server_name tgtest.twc1.net;
+events {}
 
-    ssl_certificate /etc/letsencrypt/live/tgtest.twc1.net/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/tgtest.twc1.net/privkey.pem;
-
-    # Статические файлы фронтенда
-    location / {
-        root /frontend/dist;
-        try_files $uri $uri/ /index.html;
-        add_header Cache-Control "no-cache";
+http {
+    server {
+        listen 80;
+        server_name tgtest.twc1.net;
+        return 301 https://$host$request_uri;
     }
 
-    # Правильные MIME-типы
-    types {
-        text/html html;
-        application/javascript js;
-        text/css css;
-    }
+    server {
+        listen 443 ssl;
+        server_name tgtest.twc1.net;
 
-    # Бэкенд
-    location /api/ {
-        proxy_pass http://backend:8000;
-        proxy_set_header Host $host;
+        ssl_certificate /etc/letsencrypt/live/tgtest.twc1.net/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/tgtest.twc1.net/privkey.pem;
+
+        # Статические файлы фронтенда
+        location / {
+            root /frontend/dist;  # Указываем путь к собранному фронтенду
+            try_files $uri $uri/ /index.html;
+        }
+
+        # Проксирование API-запросов
+        location /api/ {
+            proxy_pass http://backend:8000/;
+            proxy_set_header Host $host;
+        }
     }
 }
