--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,9 @@ FROM node:18
 WORKDIR /frontend
 COPY package.json ./
 RUN npm install
-COPY . .
-RUN npm run build  # Сборка проекта в папку dist
+COPY public/ ./public/
+COPY src/ ./src/
+COPY vite.config.js ./
+RUN npm run build
 EXPOSE 8080
 CMD ["npx", "serve", "-s", "dist", "-l", "8080"]
