45 create default project

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,11 +16,11 @@ http {
 
         # Статические файлы фронтенда
         location / {
-            root /frontend/dist;  # Указываем путь к собранному фронтенду
+            root /frontend/dist;  # Путь внутри контейнера Nginx
             try_files $uri $uri/ /index.html;
         }
 
-        # Проксирование API-запросов
+        # Проксирование API
         location /api/ {
             proxy_pass http://backend:8000/;
             proxy_set_header Host $host;
