--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
   nginx:
     image: nginx:latest
     volumes:
+      - ./frontend/dist:/frontend/dist
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - /etc/letsencrypt:/etc/letsencrypt
     ports:
