45 create default project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
 
   frontend:
     build: ./frontend
+    volumes:
+      - ./frontend/dist:/frontend/dist
     networks:
       - app-network
     depends_on:
