45 create default project

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,13 +14,11 @@ http {
         ssl_certificate /etc/letsencrypt/live/tgtest.twc1.net/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/tgtest.twc1.net/privkey.pem;
 
-        # Статические файлы фронтенда
         location / {
-            root /frontend/dist;  # Путь внутри контейнера Nginx
+            root /frontend/dist;
             try_files $uri $uri/ /index.html;
         }
 
-        # Проксирование API
         location /api/ {
             proxy_pass http://backend:8000/;
             proxy_set_header Host $host;
