--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,9 +2,6 @@ FROM node:18
 WORKDIR /frontend
 COPY package.json .
 RUN npm install
-COPY public/ ./public/
-COPY src/ ./src/
-COPY vite.config.js .
+COPY . .
 RUN npm run build
-EXPOSE 8080
 CMD ["npx", "serve", "-s", "dist", "-l", "8080"]
