45 create default project

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,5 +3,6 @@ WORKDIR /frontend
 COPY package.json .
 RUN npm install
 COPY . .
+RUN ls -l src
 RUN npm run build
 CMD ["npx", "serve", "-s", "dist", "-l", "8080"]
