45 create default project

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,6 +3,7 @@ WORKDIR /frontend
 COPY package.json .
 RUN npm install
 COPY . .
-RUN ls -l src
+RUN ls -l
+RUN ls -l public
 RUN npm run build
 CMD ["npx", "serve", "-s", "dist", "-l", "8080"]
