--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,9 +15,7 @@ http {
         ssl_certificate_key /etc/letsencrypt/live/tgtest.twc1.net/privkey.pem;
 
         location / {
-            root /frontend/dist;
-            index index.html;
-            try_files $uri /index.html;
+            try_files $uri $uri/ /index.html;
         }
 
         location /api/ {
