--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,6 +15,7 @@ http {
         ssl_certificate_key /etc/letsencrypt/live/tgtest.twc1.net/privkey.pem;
 
         location / {
+            root   /frontend/dist;
             try_files $uri $uri/ /index.html;
         }
 
