--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,14 @@ version: "3.8"
 
 services:
   backend:
-    build:
-      context: ./backend
+    build: ./backend
     ports:
       - "8000:8000"
     networks:
       - app-network
 
   frontend:
-    build:
-      context: ./frontend
+    build: ./frontend
     ports:
       - "8080:8080"
     networks:
