--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,6 +2,6 @@ FROM node:18
 WORKDIR /frontend
 COPY package.json .
 RUN npm install
-COPY ./frontend/src /frontend/dist
+COPY frontend/src /frontend/dist
 RUN npm run build
 CMD ["npx", "serve", "-s", "dist", "-l", "8080"]
