45 create default project

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,9 @@
 FROM node:18
 WORKDIR /frontend
+RUN npm cache clean --force
+RUN rm -rf node_modules dist package-lock.json
 COPY package.json .
 RUN npm install
-COPY src /frontend/src
+COPY . .
 RUN npm run build
 CMD ["npx", "serve", "-s", "dist", "-l", "8080"]
