--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,7 +16,7 @@ http {
 
         location / {
             root /frontend/dist;
-            try_files $uri $uri/ /index.html;
+            try_files $uri /index.html;
         }
 
         location /api/ {
