46 create default project

--- a/setup_info.ini
+++ b/setup_info.ini
@@ -15,6 +15,7 @@ docker-compose logs -f
 
 sudo apt install certbot -y
 sudo certbot certonly --standalone -d tgtest.twc1.net
+# sudo certbot renew --force-renewal
 
 ufw allow 22/tcp
 ufw allow 80/tcp
