47 create default project

--- a/setup_info.ini
+++ b/setup_info.ini
@@ -20,6 +20,8 @@ sudo certbot certonly --standalone -d tgtest.twc1.net
 ufw allow 22/tcp
 ufw allow 80/tcp
 ufw allow 443/tcp
+ufw allow 8000/tcp
+ufw allow 8080/tcp
 ufw enable
 
 curl -I https://tgtest.twc1.net
