--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
-FROM node:18
 WORKDIR /frontend
-COPY package*.json ./
+COPY package.json ./
 RUN npm install
+COPY index.html ./
 COPY src/ ./src/
 COPY vite.config.js ./
 RUN npm run build
