47 create default project

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,18 @@
-FROM node:18
+# Используем Node.js для сборки фронта
+FROM node:18 AS build
 WORKDIR /frontend
-COPY package.json ./
+
+COPY package.json package-lock.json ./
 RUN npm install
+
 COPY index.html ./
 COPY src/ ./src/
 COPY vite.config.js ./
 RUN npm run build
-EXPOSE 8080
-CMD ["npx", "serve", "-s", "dist", "-l", "8080"]
+
+# Используем Nginx для раздачи статики
+FROM nginx:latest
+WORKDIR /usr/share/nginx/html
+COPY --from=build /frontend/dist/ .
+EXPOSE 80 443
+CMD ["nginx", "-g", "daemon off;"]
