--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,8 @@ http {
         ssl_certificate_key /etc/letsencrypt/live/tgtest.twc1.net/privkey.pem;
 
         location / {
-            root /frontend/dist;
+            root /usr/share/nginx/html;
+            index index.html;
             try_files $uri /index.html;
         }
 
