--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,7 @@
 FROM node:18 AS build
 WORKDIR /frontend
 
-COPY package.json package-lock.json ./
+COPY package.json ./
 RUN npm install
 
 COPY index.html ./
