47 create default project

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,16 +1,9 @@
-# Используем Node.js для сборки фронта
 FROM node:18 AS build
 WORKDIR /frontend
-
 COPY package.json ./
 RUN npm install
-
-COPY index.html ./
-COPY src/ ./src/
-COPY vite.config.js ./
+COPY . ./
 RUN npm run build
-
-# Используем Nginx для раздачи статики
 FROM nginx:latest
 WORKDIR /usr/share/nginx/html
 COPY --from=build /frontend/dist/ .
