--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:18 AS build
 WORKDIR /frontend
-COPY package.json ./
+COPY package.json package-lock.json ./
 RUN npm install
 COPY . ./
 RUN npm run build
