48 create default project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,24 @@ services:
       - app-network
     restart: always
 
+  frontend-build:
+    build:
+      context: ./frontend
+      target: build
+    networks:
+      - app-network
+
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      target: runtime
     ports:
       - "8080:8080"
     networks:
       - app-network
     depends_on:
       - backend
+      - frontend-build
     restart: always
 
   bot:
