--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,7 +4,7 @@ COPY package.json package-lock.json ./
 RUN npm install --legacy-peer-deps
 COPY . ./
 RUN npm run build
-FROM nginx:latest
+FROM nginx:latest AS runtime
 WORKDIR /usr/share/nginx/html
 COPY --from=build /frontend/dist/ .
 EXPOSE 80 443
