48 create default project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
   nginx:
     image: nginx:latest
     volumes:
+      - ./frontend/dist:/usr/share/nginx/html/dist
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt
     ports:
