--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,7 +14,7 @@ http {
         ssl_certificate /etc/letsencrypt/live/tgtest.twc1.net/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/tgtest.twc1.net/privkey.pem;
 
-        root /usr/share/nginx/html;
+        root /usr/share/nginx/html/dist;
         index index.html;
 
         location / {
