--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt
-      - telegram_test_frontend_data:/usr/share/nginx/html
+      - frontend:/usr/share/nginx/html
     ports:
       - "80:80"
       - "443:443"
@@ -59,6 +59,3 @@ services:
 networks:
   app-network:
     driver: bridge
-
-volumes:
-  telegram_test_frontend_data:
