48 create default project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,6 @@ services:
     depends_on:
       - backend
       - frontend-build
-    volumes:
-      - telegram_test_frontend_data:/usr/share/nginx/html # 📌 Теперь frontend записывает в volume
     restart: always
 
   bot:
@@ -47,7 +45,7 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt
-      - telegram_test_frontend_data:/usr/share/nginx/html # 📌 Теперь nginx читает из volume
+      - frontend:/usr/share/nginx/html
     ports:
       - "80:80"
       - "443:443"
@@ -61,6 +59,3 @@ services:
 networks:
   app-network:
     driver: bridge
-
-volumes:
-  telegram_test_frontend_data: # 📌 Объявляем volume
