--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,13 +41,14 @@ services:
     restart: always
 
   nginx:
-    image: nginx:latest
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - /etc/letsencrypt:/etc/letsencrypt
+    build:
+      context: ./nginx
     ports:
       - "80:80"
       - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - /etc/letsencrypt:/etc/letsencrypt
     networks:
       - app-network
     depends_on:
