49 create default project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       target: frontend-build
     networks:
       - app-network
+    container_name: frontend-build
 
   frontend:
     build:
