--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx:latest
 WORKDIR /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/nginx.conf
-COPY --from=frontend-build /app/dist/ .
+COPY --from=builder /frontend/dist/ .
 EXPOSE 80 443
 CMD ["nginx", "-g", "daemon off;"]
