--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,9 @@
 events {}
 
 http {
+    include       mime.types;
+    default_type  application/octet-stream;
+
     server {
         listen 80;
         server_name tgtest.twc1.net;
@@ -18,7 +21,12 @@ http {
         index index.html;
 
         location / {
-            try_files $uri /index.html;
+            try_files $uri $uri/ /index.html;
+        }
+
+        location ~* \.(?:js|css|json|ico|png|jpg|jpeg|svg|woff|woff2|ttf|eot|otf|ttc|gif|mp4|webm|ogg|mp3|wav|flac|aac|xml|txt|pdf|zip|rar)$ {
+            expires max;
+            log_not_found off;
         }
 
         location /api/ {
