--- a/setup_info.ini
+++ b/setup_info.ini
@@ -7,13 +7,6 @@ rm -rf telegram_test
 git clone https://TOKEN@github.com/wi1ex/telegram_test.git
 cd telegram_test
 
-ufw allow 22/tcp
-ufw allow 80/tcp
-ufw allow 443/tcp
-ufw allow 8000/tcp
-ufw allow 8080/tcp
-ufw enable
-
 apt update
 apt install -y ca-certificates curl gnupg
 mkdir -p /etc/apt/keyrings
@@ -26,27 +19,24 @@ systemctl start docker.socket
 systemctl restart docker
 export DOCKER_BUILDKIT=1
 export COMPOSE_DOCKER_CLI_BUILD=1
-docker-compose build --no-cache
-docker-compose up -d
-docker-compose logs -f
 
 sudo apt install certbot -y
 sudo certbot certonly --standalone -d tgtest.twc1.net
 sudo certbot renew --force-renewal
 
-curl -I https://tgtest.twc1.net
-curl https://tgtest.twc1.net/api/
+ufw allow 22/tcp
+ufw allow 80/tcp
+ufw allow 443/tcp
+ufw allow 8000/tcp
+ufw allow 8080/tcp
+ufw enable
 
-# установка в BotFather
-/setdomain → tgtest.twc1.net
-# обращение в App.vue
-fetch("https://tgtest.twc1.net/api/save_user", ...)
+docker-compose build --no-cache
+docker-compose up -d
+docker-compose logs -f
 
 chmod +x deploy.sh
 ./deploy.sh
 
-telegram_test содержит docker-compose.yml, deploy.sh, .env, setup_info.ini, /backend, /bot, /frontend, /nginx
-backend/ содержит app.py, routes.py, Dockerfile и requirements.txt.
-bot/ содержит bot.py, config.py, Dockerfile и requirements.txt.
-frontend/ содержит Dockerfile, package.json, vite.config.js, src/index.html, src/App.vue, src/main.js, прочие компоненты в assets/components и изображения в assets/images/
-nginx/ содержит nginx.conf
+# создание .env с необходимыми ключами и подключение в bot.py, config.py, docker-compose environment bot
+# установка tgtest.twc1.net в nginx.conf, App.vue (fetch) и BotFather
