--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,10 +21,10 @@ http {
         index index.html;
 
         location / {
-            try_files $uri /index.html;
+            try_files $uri $uri/ /index.html;
         }
 
-        location ~* \.(?:js|css|json|ico|png|jpg|jpeg|svg|woff|woff2|ttf|eot|otf|gif|mp4|webm|ogg|mp3|wav|flac|aac|xml|txt|pdf|zip|rar)$ {
+        location ~* \.(?:js|css|json|ico|png|jpg|jpeg|svg|woff|woff2|ttf|eot|otf|ttc|gif|mp4|webm|ogg|mp3|wav|flac|aac|xml|txt|pdf|zip|rar)$ {
             expires max;
             log_not_found off;
         }
