52 create default project

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,7 +24,7 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-        location ~* \.(?:js|css|json|ico|png|jpg|jpeg|svg|woff|woff2|ttf|eot|otf|ttc|gif|mp4|webm|ogg|mp3|wav|flac|aac|xml|txt|pdf|zip|rar)$ {
+        location ~* \.(js|css|json|ico|png|jpg|jpeg|svg|woff|woff2|ttf|eot|otf|gif|mp4|webm|ogg|mp3|wav|flac|aac|xml|txt|pdf|zip|rar)$ {
             expires max;
             log_not_found off;
         }
