58 add .vue components

--- a/setup_info.ini
+++ b/setup_info.ini
@@ -38,5 +38,6 @@ docker-compose logs -f
 chmod +x deploy.sh
 ./deploy.sh
 
-# создание .env с необходимыми ключами и подключение в bot.py, config.py, docker-compose environment bot
+# npm install локально для обновления package-lock.json
+# создание .env с необходимыми ключами и подключение в bot.py, config.py, docker-compose-environment-bot
 # установка tgtest.twc1.net в nginx.conf, App.vue (fetch) и BotFather
