64 change url and bot_token

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,13 +6,13 @@ http {
 
     server {
         listen 80;
-        server_name tgtest.twc1.net;
+        server_name yanda.twc1.net;
         return 301 https://$host$request_uri;
     }
 
     server {
         listen 443 ssl;
-        server_name tgtest.twc1.net;
+        server_name yanda.twc1.net;
 
         ssl_certificate /etc/letsencrypt/live/tgtest.twc1.net/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/tgtest.twc1.net/privkey.pem;
