--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,14 +42,15 @@ services:
     restart: always
 
   nginx:
-    build:
-      context: ./nginx
+#    build:
+#      context: ./nginx
+    build: ./nginx
     ports:
       - "80:80"
       - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - /etc/letsencrypt:/etc/letsencrypt
+#    volumes:
+#      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+#      - /etc/letsencrypt:/etc/letsencrypt
     networks:
       - app-network
     depends_on:
