--- a/setup_info.ini
+++ b/setup_info.ini
@@ -21,7 +21,7 @@ export DOCKER_BUILDKIT=1
 export COMPOSE_DOCKER_CLI_BUILD=1
 
 sudo apt install certbot -y
-sudo certbot certonly --standalone -d tgtest.twc1.net
+sudo certbot certonly --standalone -d yanda.twc1.net
 sudo certbot renew --force-renewal
 
 ufw allow 22/tcp
