--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,7 @@
 #networks:
 #  app-network:
 #    driver: bridge
-version: "3.8"
+version: "3.7"
 
 services:
   backend:
@@ -77,9 +77,7 @@ services:
     restart: always
 
   frontend:
-    build:
-      context: ./frontend
-      target: frontend-runtime
+    build: ./frontend
     ports:
       - "8080:8080"
     restart: always
@@ -89,3 +87,4 @@ services:
     ports:
       - "80:80"
     restart: always
+
