--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,90 +1,62 @@
-#version: "3.8"
-#
-#services:
-#  backend:
-#    build: ./backend
-#    ports:
-#      - "8000:8000"
-#    networks:
-#      - app-network
-#    restart: always
-#
-#  frontend-build:
-#    build:
-#      context: ./frontend
-#      target: frontend-build
-#    networks:
-#      - app-network
-#    image: frontend-build
-#
-#  frontend:
-#    build:
-#      context: ./frontend
-#      target: frontend-runtime
-#    ports:
-#      - "8080:8080"
-#    networks:
-#      - app-network
-#    depends_on:
-#      - backend
-#      - frontend-build
-#    restart: always
-#
-#  bot:
-#    build: ./bot
-#    environment:
-#      BOT_TOKEN: ${BOT_TOKEN}
-#      ADMIN_ID: ${ADMIN_ID}
-#    networks:
-#      - app-network
-#    depends_on:
-#      - backend
-#    restart: always
-#
-#  nginx:
-#    build:
-#      context: ./nginx
-#    ports:
-#      - "80:80"
-#      - "443:443"
-#    volumes:
-#      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-#      - /etc/letsencrypt:/etc/letsencrypt
-#    networks:
-#      - app-network
-#    depends_on:
-#      - backend
-#      - frontend
-#    restart: always
-#
-#networks:
-#  app-network:
-#    driver: bridge
-version: "3.7"
+version: "3.8"
 
 services:
   backend:
     build: ./backend
     ports:
       - "8000:8000"
+    networks:
+      - app-network
+    restart: always
+
+  frontend-build:
+    build:
+      context: ./frontend
+      target: frontend-build
+    networks:
+      - app-network
+    image: frontend-build
+
+  frontend:
+    build:
+      context: ./frontend
+      target: frontend-runtime
+    ports:
+      - "8080:8080"
+    networks:
+      - app-network
+    depends_on:
+      - backend
+      - frontend-build
     restart: always
 
   bot:
     build: ./bot
     environment:
-      BOT_TOKEN: "${BOT_TOKEN}"
-      ADMIN_ID: "${ADMIN_ID}"
-    restart: always
-
-  frontend:
-    build: ./frontend
-    ports:
-      - "8080:8080"
+      BOT_TOKEN: ${BOT_TOKEN}
+      ADMIN_ID: ${ADMIN_ID}
+    networks:
+      - app-network
+    depends_on:
+      - backend
     restart: always
 
   nginx:
-    build: ./nginx
+    build:
+      context: ./nginx
     ports:
       - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - /etc/letsencrypt:/etc/letsencrypt
+    networks:
+      - app-network
+    depends_on:
+      - backend
+      - frontend
     restart: always
 
+networks:
+  app-network:
+    driver: bridge
