--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,16 +6,16 @@ http {
 
     server {
         listen 80;
-        server_name yanda.twc1.net;
+        server_name shop.yanda.twc1.net;
         return 301 https://$host$request_uri;
     }
 
     server {
         listen 443 ssl;
-        server_name yanda.twc1.net;
+        server_name shop.yanda.twc1.net;
 
-        ssl_certificate /etc/letsencrypt/live/yanda.twc1.net/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/yanda.twc1.net/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/shop.yanda.twc1.net/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/shop.yanda.twc1.net/privkey.pem;
 
         root /usr/share/nginx/html;
         index index.html;
