--- a/setup_info.ini
+++ b/setup_info.ini
@@ -17,6 +17,7 @@ apt install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker
 systemctl enable docker.socket
 systemctl start docker.socket
 systemctl restart docker
+docker login --username wilex A114umdlilusm.
 export DOCKER_BUILDKIT=1
 export COMPOSE_DOCKER_CLI_BUILD=1
 
