--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,39 +1,36 @@
 events {}
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
+  include       mime.types;
+  default_type  application/octet-stream;
 
-    server {
-        listen 80;
-        server_name shop.yanda.twc1.net;
-        return 301 https://$host$request_uri;
+  server {
+    listen 80;
+    server_name shop.yanda.twc1.net;
+    return 301 https://$host$request_uri;
+  }
+
+  server {
+    listen 443 ssl;
+    server_name shop.yanda.twc1.net;
+
+    ssl_certificate     /etc/letsencrypt/live/shop.yanda.twc1.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/shop.yanda.twc1.net/privkey.pem;
+
+    # ВСЁ, ЧТО НЕ /api/, проксируем к фронтенду
+    location / {
+      proxy_pass         http://frontend:80;
+      proxy_set_header   Host              $host;
+      proxy_set_header   X-Real-IP         $remote_addr;
+      proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
     }
 
-    server {
-        listen 443 ssl;
-        server_name shop.yanda.twc1.net;
-
-        ssl_certificate /etc/letsencrypt/live/shop.yanda.twc1.net/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/shop.yanda.twc1.net/privkey.pem;
-
-        root /usr/share/nginx/html;
-        index index.html;
-
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
-
-        location ~* \.(js|css|json|ico|png|jpg|jpeg|svg|woff|woff2|ttf|eot|otf|gif|mp4|webm|ogg|mp3|wav|flac|aac|xml|txt|pdf|zip|rar)$ {
-            expires max;
-            log_not_found off;
-        }
-
-        location /api/ {
-            proxy_pass http://backend:8000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
+    # /api/ — на бэкенд
+    location /api/ {
+      proxy_pass         http://backend:8000;
+      proxy_set_header   Host              $host;
+      proxy_set_header   X-Real-IP         $remote_addr;
+      proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
     }
+  }
 }
