74 add pg and redis db

--- a/setup_info.ini
+++ b/setup_info.ini
@@ -3,9 +3,9 @@ apt install -y docker.io docker-compose
 systemctl enable docker
 
 mkdir -p ~/app && cd ~/app
-rm -rf telegram_test
-git clone https://TOKEN@github.com/wi1ex/telegram_test.git
-cd telegram_test
+rm -rf yanda_shop
+git clone https://TOKEN@github.com/wi1ex/yanda_shop.git
+cd yanda_shop
 
 apt update
 apt install -y ca-certificates curl gnupg
@@ -28,6 +28,8 @@ sudo certbot renew --force-renewal
 ufw allow 22/tcp
 ufw allow 80/tcp
 ufw allow 443/tcp
+ufw allow 5432/tcp
+ufw allow 6379/tcp
 ufw allow 8000/tcp
 ufw allow 8080/tcp
 ufw enable
@@ -40,5 +42,5 @@ chmod +x deploy.sh
 ./deploy.sh
 
 # npm install локально для обновления package-lock.json
-# создание .env с необходимыми ключами и подключение в bot.py, config.py, docker-compose-environment-bot
-# установка tgtest.twc1.net в nginx.conf, App.vue (fetch) и BotFather
+# запись домена в nginx.conf, App.vue (fetch) и BotFather
+
