--- a/.env
+++ b/.env
@@ -1,2 +1,15 @@
+# PostgreSQL
+DB_HOST=db
+DB_PORT=5432
+DB_NAME=shop_db
+DB_USER=shop_user
+DB_PASSWORD=Y@nd@$h0pP@$$w0rd
+
+# Redis
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=Y@nd@$h0pP@$$w0rd
+
+# Telegram-бот
 BOT_TOKEN='7207149343:AAFdbkzwWDY8z_n8-a0rtYr9R2bQqt3-y8U'
 ADMIN_ID=59404714
