--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,14 @@ services:
     build: ./backend
     ports:
       - "8000:8000"
+    env_file: .env
     networks:
       - app-network
     restart: always
 
   bot:
     build: ./bot
-    environment:
-      BOT_TOKEN: ${BOT_TOKEN}
-      ADMIN_ID: ${ADMIN_ID}
+    env_file: .env
     networks:
       - app-network
     depends_on:
@@ -48,28 +47,26 @@ services:
 
   db:
     image: postgres:17
-    restart: always
-    environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
     ports:
       - "5432:5432"
+    env_file: .env
     volumes:
       - db_data:/var/lib/postgresql/data
     networks:
       - app-network
+    restart: always
 
   redis:
     image: redis:7
-    restart: always
-    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
     ports:
       - "6379:6379"
+    env_file: .env
+    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
     volumes:
       - redis_data:/data
     networks:
       - app-network
+    restart: always
 
 networks:
   app-network:
