74 add pg and redis db

--- a/.env
+++ b/.env
@@ -3,12 +3,12 @@ DB_HOST=db
 DB_PORT=5432
 DB_NAME=shop_db
 DB_USER=shop_user
-DB_PASSWORD=Y@nd@$h0pP@$$w0rd
+DB_PASSWORD=YandaShopPassword
 
 # Redis
 REDIS_HOST=redis
 REDIS_PORT=6379
-REDIS_PASSWORD=Y@nd@$h0pP@$$w0rd
+REDIS_PASSWORD=YandaShopPassword
 
 # Telegram-бот
 BOT_TOKEN='7207149343:AAFdbkzwWDY8z_n8-a0rtYr9R2bQqt3-y8U'
