74 add pg and redis db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     env_file: .env
     networks:
       - app-network
+    depends_on:
+      - db
     restart: always
 
   bot:
@@ -50,6 +52,10 @@ services:
     ports:
       - "5432:5432"
     env_file: .env
+    environment:
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     volumes:
       - db_data:/var/lib/postgresql/data
     networks:
