--- a/setup_info.ini
+++ b/setup_info.ini
@@ -44,3 +44,20 @@ chmod +x deploy.sh
 # npm install локально для обновления package-lock.json
 # запись домена в nginx.conf, App.vue (fetch) и BotFather
 
+# первичная настройка миграции
+docker-compose build backend
+docker-compose up -d backend
+docker-compose exec backend flask db init
+docker-compose exec backend flask db migrate -m "initial schema"
+docker-compose exec backend flask db upgrade
+docker-compose down
+
+# последующее изменение миграции
+изменение models.py
+обновит гит
+cd /root/app/yanda_shop
+git fetch --all
+git reset --hard origin/main
+flask db migrate -m "описание изменений"
+скачать новый файл миграции
+обновит гит
