76 add Migrate db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     ports:
       - "8000:8000"
     env_file: .env
+    volumes:
+      - ./backend:/backend
     networks:
       - app-network
     depends_on:
