77 add Migrate db

--- a/setup_info.ini
+++ b/setup_info.ini
@@ -50,6 +50,7 @@ docker-compose up -d backend
 docker-compose exec backend flask db init
 docker-compose exec backend flask db migrate -m "initial schema"
 docker-compose exec backend flask db upgrade
+docker-compose exec backend flask db stamp head
 docker-compose down
 
 # последующее изменение миграции
