77 add Migrate db

--- a/setup_info.ini
+++ b/setup_info.ini
@@ -59,6 +59,9 @@ docker-compose down
 cd /root/app/yanda_shop
 git fetch --all
 git reset --hard origin/main
+docker-compose build backend
+docker-compose up -d backend
 flask db migrate -m "описание изменений"
+docker-compose down
 скачать новый файл миграции
 обновит гит
