79 add Migrate db

--- a/setup_info.ini
+++ b/setup_info.ini
@@ -45,13 +45,11 @@ chmod +x deploy.sh
 # запись домена в nginx.conf, App.vue (fetch) и BotFather
 
 # первичная настройка миграции
-docker-compose build backend
-docker-compose up -d backend
+docker-compose up -d db backend
 docker-compose exec backend flask db init
 docker-compose exec backend flask db migrate -m "initial schema"
 docker-compose exec backend flask db upgrade
-docker-compose exec backend flask db stamp head
-docker-compose down
+docker-compose up -d
 
 # последующее изменение миграции
 изменение models.py
