80 add Migrate db

--- a/setup_info.ini
+++ b/setup_info.ini
@@ -52,14 +52,9 @@ docker-compose exec backend flask db upgrade
 docker-compose up -d
 
 # последующее изменение миграции
-изменение models.py
-обновит гит
-cd /root/app/yanda_shop
-git fetch --all
-git reset --hard origin/main
-docker-compose build backend
-docker-compose up -d backend
-flask db migrate -m "описание изменений"
-docker-compose down
-скачать новый файл миграции
-обновит гит
+изменение models.py локально
+скопировать models.py на сервер
+docker-compose exec backend flask db migrate -m "описание изменений"
+скопировать миграции на локальную машину
+обновить гит локально
+запустить deploy.sh на сервере
