84 add domain url in .env and store.js

--- a/.env
+++ b/.env
@@ -12,4 +12,5 @@ REDIS_PASSWORD=YandaShopPassword
 
 # Telegram-бот
 BOT_TOKEN='7207149343:AAFdbkzwWDY8z_n8-a0rtYr9R2bQqt3-y8U'
+BACKEND_URL='https://shop.yanda.twc1.net'
 ADMIN_ID=59404714
