--- a/setup_info.ini
+++ b/setup_info.ini
@@ -42,7 +42,7 @@ chmod +x deploy.sh
 ./deploy.sh
 
 # npm install локально для обновления package-lock.json
-# запись домена в bot.py, store.js, nginx.conf, App.vue (fetch) и BotFather
+# запись домена в .env, store.js, nginx.conf и BotFather
 # git clone https://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@github.com/wi1ex/yanda_shop.git
 # telegram bot token=7207149343:AAFdbkzwWDY8z_n8-a0rtYr9R2bQqt3-y8U
 
