--- a/.env
+++ b/.env
@@ -6,9 +6,15 @@ DB_USER=shop_user
 DB_PASSWORD=YandaShopPassword
 
 # Redis
-REDIS_HOST=redis
+REDIS_HOST=redis  # default
 REDIS_PORT=6379
 REDIS_PASSWORD=YandaShopPassword
+
+# MinIO (S3-совместимое хранилище)
+MINIO_ACCESS_KEY=shop_images
+MINIO_SECRET_KEY=YandaShopPassword
+MINIO_HOST=minio:9000
+MINIO_BUCKET=product-images
 
 # Telegram-бот
 BOT_TOKEN='7207149343:AAFdbkzwWDY8z_n8-a0rtYr9R2bQqt3-y8U'
