--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,5 +30,12 @@ http {
       proxy_set_header   X-Real-IP         $remote_addr;
       proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
     }
+
+    location /images/ {
+      proxy_pass         http://minio:9000/product-images/;
+      proxy_set_header   Host              $host;
+      proxy_set_header   X-Real-IP         $remote_addr;
+      proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+    }
   }
 }
