91 edit models db

--- a/setup_info.ini
+++ b/setup_info.ini
@@ -52,3 +52,19 @@ docker-compose exec backend flask db migrate -m "описание изменен
 скопировать миграции на локальную машину
 обновить гит локально
 запустить deploy.sh на сервере
+
+# если mc ещё не установлена, на сервере:
+wget https://dl.min.io/client/mc/release/linux-amd64/mc
+chmod +x mc
+# затем прописать алиас к вашему MinIO
+./mc alias set myminio http://127.0.0.1:9000 ${MINIO_ROOT_USER} ${MINIO_ROOT_PASSWORD}
+# и сделать бакет public-read
+./mc policy set download myminio/product-images
+# Проверим, что подключение работает и бакет виден
+./mc ls myminio
+# Установить anonymous-политику для бакета
+./mc anonymous set download myminio/product-images
+# Проверить, что политика применена
+./mc anonymous info myminio/product-images
+# Убедитесь, что теперь показывает ваши файлы
+./mc ls myminio/product-images
